--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -83,5 +83,14 @@
 }
 
 .table-layout div img {
-   width: 30px;
+   width: 35px;
+}
+
+.table-layout .green {
+   color: #00d515;
+   text-align: center;
+}
+.table-layout .red {
+   color: #ff4646;
+   text-align: center;
 }
