--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -94,3 +94,26 @@
    color: #ff4646;
    text-align: center;
 }
+
+/* todo:    Media Query */
+
+@media (max-width: 768px) {
+   .table-layout {
+      grid-template-columns: 0.5fr 3fr 1fr 1fr;
+   }
+   .market-cap {
+      display: none;
+   }
+}
+
+@media (max-width: 500px) {
+   .table-layout div img {
+      width: 25px;
+   }
+   .table-layout {
+      font-size: 12px;
+   }
+   .hero form input {
+      width: 100%;
+   }
+}
